--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,15 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.1",
+    "zod": "^4.1.12"
   }
 }
